--- a/dev/templates/template/aside-profile.pug
+++ b/dev/templates/template/aside-profile.pug
@@ -1,22 +1,22 @@
 aside.profile-aside
 	nav
-		a(href='/profile.html').profile-aside-item
+		a(href='/profile.html').profile-aside-item.active
 			svg
-				use(xlink-href='/img/sprite.svg#plus')
+				use(xlink:href='/img/sprite.svg#add')
 			span Add Memeber
 		a(href='/details.html').profile-aside-item
 			svg
-				use(xlink-href='/img/sprite.svg#plus')
+				use(xlink:href='/img/sprite.svg#person')
 			span Acoount Details
 		a(href='/membership.html').profile-aside-item
 			svg
-				use(xlink-href='/img/sprite.svg#plus')
+				use(xlink:href='/img/sprite.svg#beenhere')
 			span Membership
 		a(href='/notifications.html').profile-aside-item
 			svg
-				use(xlink-href='/img/sprite.svg#plus')
+				use(xlink:href='/img/sprite.svg#mark_email_unread')
 			span Notifications
 		a(href='/benefits.html').profile-aside-item
 			svg
-				use(xlink-href='/img/sprite.svg#plus')
+				use(xlink:href='/img/sprite.svg#loyality')
 			span Benefits
