--- a/dev/stylus/reset.styl
+++ b/dev/stylus/reset.styl
@@ -4,6 +4,7 @@
 	box-sizing border-box;
 	padding 0
 	margin 0
+	outline none
 }
 
 html {
@@ -37,7 +38,8 @@ a:not([class]) {
 	text-decoration-skip-ink: auto;
 	color: currentColor;
 }
-
+em
+	font-style normal
 img,
 picture {
 	max-width: 100%;
@@ -48,7 +50,7 @@ input,button,
 textarea,select {
 	font: inherit;
 }
-button,select{
+button,select,label{
 	cursor: pointer
 }
 textarea:not([rows]) {
