--- a/dev/templates/benefits.pug
+++ b/dev/templates/benefits.pug
@@ -3,46 +3,47 @@ append vars
 	-
 		page_title = 'Profile'
 block content
-	.row
+	.row.profile-row
 		include template/aside-profile
 		main
 			section.profile-content
-				h1.title BEnefits
-				p.text
-					| As a member of Identimaxx you are entitled benefits under the Master Policy referenced below.
-					| This Summary Description of Benefits does not state all the terms, conditions, and exclusions of the Policy.
+				h1.title Benefits
 				.profile-benefits
 					.profile-benefits-aside
-						a(href='#').profile-benefits-link Summary
-						a(href='#').profile-benefits-link General Information
-						a(href='#').profile-benefits-link Limit of Insurance
-						a(href='#').profile-benefits-link Filling a Claim
-						a(href='#').profile-benefits-link Benefits
-						a(href='#').profile-benefits-link Stolen Identity Event
-						a(href='#').profile-benefits-link Limits of Insurance
-						a(href='#').profile-benefits-link Deductible
-						a(href='#').profile-benefits-link Other Insurance
-						a(href='#').profile-benefits-link Duplicate Coraverages
+						p.text.profile-benefits-text
+							| As a member of Identimaxx you are entitled benefits under the Master Policy referenced below.
+							| This Summary Description of Benefits does not state all the terms, conditions, and exclusions of the Policy.
+						.profile-benefits-links
+							a(href='#').profile-benefits-link Summary
+							a(href='#').profile-benefits-link General Information
+							a(href='#').profile-benefits-link Limit of Insurance
+							a(href='#').profile-benefits-link Filling a Claim
+							a(href='#').profile-benefits-link Benefits
+							a(href='#').profile-benefits-link Stolen Identity Event
+							a(href='#').profile-benefits-link Limits of Insurance
+							a(href='#').profile-benefits-link Deductible
+							a(href='#').profile-benefits-link Other Insurance
+							a(href='#').profile-benefits-link Duplicate Coraverages
 					.profile-benefits-content
-						h3.subtitle
+						h3.block-title
 							| Summary Description of Benefits for the Personal Internet & Identity Coverage Master Policy
-						p.profile-benefit-text
+						p.profile-benefits-content-text
 							| This Summary is provided to inform you that as a member of PrivacyMaxx you are entitled benefits under the Master
 							| Policy referenced below. This Summary Description of Benefits does not state all the terms, conditions, and exclusions
 							| of the Policy. Your benefits will be subject to all of the terms, conditions, and exclusions of the Master Policy,
 							| even if they are not mentioned in this Summary. A complete copy of the Policy will be provided upon request.
-						p.profile-benefit-text
+						p.profile-benefits-content-text
 							| The Master Policy of Personal Internet Identity Coverage has been issued to:
-							| Privacy Maxx, LLC.(the Master Policy Holder), Policy Number [7080220 and 29106852 respectively]
+							| Privacy Maxx, LLC.(the Master Policy Holder), Policy Number [7080220 and 29106852 respectively]
 							| underwritten by insurance company subsidiaries or affiliates of American International Group, Inc.,to
 							| provide benefits as described in this Summary.
-						h3.subtitle General Information
-						p.profile-benefit-text
+						h3.block-title General Information
+						p.profile-benefits-content-text
 							| Should you have any questions regarding the Membership Program provided by the Master Policyholder,
 							| or wish to view a complete copy of the Master Policy,
 							| please call the customer service number located in your membership materials or at 1-800-854-6147.
-						h3.subtitle Limit of Insurance
-						ul.profile-benefits-list
+						h3.block-title Limit of Insurance
+						ul.profile-benefits-content-list
 							li
 								strong Aggregate Limit of Insurance:
 								span  $25,000 or $1,000,000 per policy period
@@ -61,4 +62,4 @@ block content
 							li
 								strong Deductible:
 								span $0 per policy period (depending on your service plan level)
-						h3.subtitle Filing a Claim
+						h3.block-title Filing a Claim
