--- a/dev/templates/login.pug
+++ b/dev/templates/login.pug
@@ -24,3 +24,4 @@ block content
 						.login-form-actions
 							span Not a member yet?
 							a(href='/signup.html').link Sign Up
+	include template/footer
