--- a/dev/templates/notifications.pug
+++ b/dev/templates/notifications.pug
@@ -3,39 +3,48 @@ append vars
 	-
 		page_title = 'Profile'
 block content
-	.row
+	.row.profile-row
 		include template/aside-profile
 		main
 			section.profile-content
 				h1.title Notifications
-				h2.subtitle Preferences
-				p.text
-					| Select how you would like to receive important alerts related to your account.
-				.profile-notify
-					svg
-						use(xlink-href='/img/sprite.svg#email')
-					.profile-notify-title
-						strong Email
-					label.select
-						span.select-head
-							span.select-option john@aol.com
-						span.select-body
-					label.checkbox
-						input(type='checkbox')
-						span News & Information
-					label.checkbox
-						input(type='checkbox')
-						span Critical Alerts
-					label.checkbox
-						input(type='checkbox')
-						span Payment Information
-				.profile-notify
-					svg
-						use(xlink-href='/img/sprite.svg#text')
-					.profile-notify-title
-						strong Text Messages
-						span Receive SMS alerts by verifying your number
-					label.select
-						span.select-head
-							span.select-option (123) 456 7891
-						span.select-body
+				.profile-table-details
+					h2.block-title Preferences
+					p.text.profile-notify-text
+						| Select how you would like to receive important alerts
+						br
+						| related to your account.
+					.profile-notify
+						.profile-notify-row
+							.profile-notify-title
+								svg
+									use(xlink:href='/img/sprite.svg#mail')
+								strong Email
+							label.select.profile-notify-select
+								span.select-head
+									span.select-option john@aol.com
+									svg
+										use(xlink:href='/img/sprite.svg#chevron_right')
+								span.select-body
+							.profile-notify-checkboxes
+								label.checkbox.profile-notify-checkbox.-mt24
+									input(type='checkbox')
+									span News & Information
+								label.checkbox.profile-notify-checkbox
+									input(type='checkbox')
+									span Critical Alerts
+								label.checkbox.profile-notify-checkbox
+									input(type='checkbox')
+									span Payment Information
+					.profile-notify
+						.profile-notify-title
+							svg
+								use(xlink:href='/img/sprite.svg#chat')
+							em
+								strong Text Messages
+								span Receive SMS alerts by verifying your number
+						label.select.profile-notify-select
+							span.select-head
+								span.select-option (123) 456 7891
+							span.select-body
+	include footer-profile
