--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -55,6 +55,16 @@ body
 	&.-small
 		font-size 13px
 		text-decoration underline
+	&.-plus
+		display: flex
+		align-items: center
+		color RGB($pdark_blue)
+		font 500 16px/19.2px Barlow
+		svg
+			wh 24px
+		svg use
+			fill RGB($pdark_blue)
+			stroke RGB($pdark_blue)
 .title
 	font 500 24px/30px Barlow
 	+desktop()
