--- a/dev/templates/home.pug
+++ b/dev/templates/home.pug
@@ -5,31 +5,32 @@ append vars
 block content
     main
         section.home
-            .section
+            .section.home-section
                 .row
-                    .home-row
+                    .home-row.row
                         .link.-plus
                             svg
-                                use(xlink:href='/img/sprite.svg#plus')
+                                use(xlink:href='/img/sprite.svg#add_circle')
                             span Add Family Member
-                        .home-row_info
-                            span My Protection:
-                            strong Active
-                        .home-row_info
-                            span Account Type:
-                            strong Family
-                        .home-row_info
-                            span Last Login Date:
-                            span 03/15/2024
-                .row
+                        .home-row-titles.row
+                            .home-row_info
+                                span My Protection:
+                                strong  Active
+                            .home-row_info
+                                span Account Type:
+                                strong  Family
+                            .home-row_info
+                                span Last Login Date:
+                                span  03/15/2024
+                .row.white-items
                     .white-item
                         .white-block
                             .white-block_head
-                                h5.white-block_title
+                                h5.white-block_title.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#profile')
                                     span Identity Protection
-                                .head-block-status.-active
+                                .white-block-status.-active.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#check_circle')
                                     span Active
@@ -68,11 +69,11 @@ block content
                                             | Vie All Alerts
                         .white-block
                             .white-block_head
-                                h5.white-block_title
+                                h5.white-block_title.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#profile')
                                     span Credit Monitoring
-                                .head-block-status.-inactive
+                                .white-block-status.-inactive.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#error')
                                     span Active
@@ -82,30 +83,22 @@ block content
                                     br
                                     | service, ensuring your financial security.
                                 ul.white-block-list
-                                    li.white-block-list-item
-                                        .white-block-list-item_image
-                                            svg
-                                                use(xlink:href='/img/sprite.svg#request_quote')
-                                        .white-block-list-item_content
-                                            span Jan 17 at 5:22 AM
-                                            strong
-                                                | Your password appeared in multiple data breach
-                                                | records for jmurack@gmail.com
                                     li.white-block-list-item.-empty
                                         .white-block-list-item_image
                                             .white-block-list-item_circle
                                         .white-block-list-item_content
+                                            .white-block-list-item_header
                                             .white-block-list-item_line
                                             .white-block-list-item_line
                                             .white-block-list-item_line.-short
                     .white-item
                         .white-block
                             .white-block_head
-                                h5.white-block_title
+                                h5.white-block_title.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#news')
                                     span Title Monitoring
-                                .head-block-status.-active
+                                .white-block-status.-active.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#check_circle')
                                     span Active
@@ -128,16 +121,15 @@ block content
                                                 use(xlink:href='/img/sprite.svg#supervisor_account')
                                         .white-block-list-item_content
                                             span Jan 17 at 5:22 AM
-                                            em
+                                            strong
                                                 | Your password appeared in multiple data breach
-                                                | records for jmurack@gmail.com
                                     li.white-block-list-item
                                         .white-block-list-item_image
                                             svg
                                                 use(xlink:href='/img/sprite.svg#location_away')
                                         .white-block-list-item_content
                                             span Jan 17 at 5:22 AM
-                                            em
+                                            strong
                                                 | Your password appeared in multiple data breach
                                                 | records for jmurack@gmail.com
                                     li.white-block-list-item
@@ -145,11 +137,11 @@ block content
                                             | Vie All Alerts
                         .white-block
                             .white-block_head
-                                h5.white-block_title
+                                h5.white-block_title.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#profile')
                                     span Privacy Protect
-                                .head-block-status.-inactive
+                                .white-block-status.-inactive.row
                                     svg
                                         use(xlink:href='/img/sprite.svg#error')
                                     span Active
@@ -159,19 +151,11 @@ block content
                                     br
                                     | ensuring peace of mind while you browse
                                 ul.white-block-list
-                                    li.white-block-list-item
-                                        .white-block-list-item_image
-                                            svg
-                                                use(xlink:href='/img/sprite.svg#request_quote')
-                                        .white-block-list-item_content
-                                            span Jan 17 at 5:22 AM
-                                            strong
-                                                | Your password appeared in multiple data breach
-                                                | records for jmurack@gmail.com
                                     li.white-block-list-item.-empty
                                         .white-block-list-item_image
                                             .white-block-list-item_circle
                                         .white-block-list-item_content
+                                            .white-block-list-item_header
                                             .white-block-list-item_line
                                             .white-block-list-item_line
                                             .white-block-list-item_line.-short
