--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -3,4 +3,4 @@ footer.foot
 		.copy
 			span
 				| @copy; Indetimaxxx 2024. All rights reserved
-		//+inc('js','front.js',false)(type="module")
+	script(src='/front.js' type='module')
